# CGJ-P1

./: .gitignore
Lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cgj  cmake_install.cmake  zip.sh
Lab1/src/: CMakeLists.txt  GLM Template.vcxproj  main.cpp
Lab1/src/ex1/: CMakeLists.txt  ex1.cpp  ex1.hpp
Lab1/src/ex2/: CMakeLists.txt  ex2.cpp  ex2.hpp
Lab1/src/ex3/: CMakeLists.txt  ex3.cpp  ex3.hpp
Lab1/src/ex4/: CMakeLists.txt  ex4.cpp  ex4.hpp
Lab1/src/ex5/: CMakeLists.txt  ex5.cpp  ex5.hpp
Lab1/src/ex6/: CMakeLists.txt  ex6.cpp  ex6.hpp
Lab1/src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
Lab1/src/x64/Debug/: GLM Template.exe.recipe
tangram2d/: CMakeLists.txt  README.md  zip.sh
tangram2d/mgl/: CMakeLists.txt  mgl.hpp
tangram2d/src/: CMakeLists.txt  Makefile  clip-fs.glsl  hello-2d-world  hello-2d-world.cpp  tangram2d.cpp
tangram3d/: CMakeLists.txt  README.md  zip.sh
tangram3d/mgl/: mgl.hpp  mglCamera.cpp  mglCamera.hpp  mglConventions.hpp  mglDrawable.hpp  mglKeyManager.cpp  mglKeyManager.hpp  mglManager.hpp  mglMesh.hpp  mglOrbitalCamera.cpp  mglOrbitalCamera.hpp  mglScenegraph.cpp  mglScenegraph.hpp
tangram3d/src/: CMakeLists.txt  Makefile  cube-fs.glsl  cube-vs.glsl  main.cpp  mesh-loader.cpp  tangram.cpp  tangram.hpp
